--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
-
-project(n_queens_basic LANGUAGES CXX)
+project(nqueens_solver)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_executable(n_queens
-    main.cpp
+include_directories(include)
+
+add_executable(nqueens
+    src/main.cpp
+    src/nqueens.cpp
+    src/experiments.cpp
 )
